examples/compiler_errors/und_lab.gs
nop	Hello

main:
jmp	mian	Something's wrong here.
